Updated data loading to be more modular and revised ? to # to elide unneeded server calls.

--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
           <li>The result of this is displayed below in a table.</li>
         </ol>
         <div class = "row">
-          <a class="six columns" href="?portfolioData=%7B%22assetClasses%22:%5B%7B%22name%22:%22US%20Stock%22,%22allocation%22:%2256%22,%22notes%22:%22VTI,%20FSTMX,%20...%22%7D,%7B%22name%22:%22ex-US%20Stock%22,%22allocation%22:%2224%22,%22notes%22:%22VXUS,%20FSGUX,%20...%22%7D,%7B%22name%22:%22US%20Bond%22,%22allocation%22:%2220%22,%22notes%22:%22BND,%20FBIDX,%20...%22%7D%5D,%22accounts%22:%5B%7B%22name%22:%22HSA%22,%22balance%22:%224000%22,%22notes%22:%22No%20taxes%20on%20healthcare%22%7D,%7B%22name%22:%22Roth%20IRA%22,%22balance%22:%227000%22,%22notes%22:%22No%20taxes%20on%20growth%22%7D,%7B%22name%22:%22401%20(k)%22,%22balance%22:%2212000%22,%22notes%22:%22Tax%20deferred%22%7D,%7B%22name%22:%22Taxable%20brokerage%20acct%22,%22balance%22:%222000%22,%22notes%22:null%7D%5D%7D">
+          <a class="six columns" href="javascript:loadState(exampleData)">
             Click here to load some example data.
           </a>
 
-          <a class="six columns align-right" href="?">
+          <a class="six columns align-right" href="javascript:clearState()">
             Click here to clear all data.
           </a>
         </div>
