--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
 
         <br/>
         <br/>
-        <center><h3>Portfolio Rebalancing Calculator</h3></center>
+        <center>
+          <h3>Rebalance Calc:</h3>
+          <h4>A Portfolio Rebalancing Calculator</h4>
+        </center>
         <br/>
         <p>
           This tool is meant to help with rebalancing accounts, and with building a tax efficient portfolio. Rebalancing keeps one's asset allocation (and exposure to risk) in a comfortable range, and works best when all investment accounts are treated as part of a single portfolio.
@@ -102,6 +105,14 @@
         </center>
       </div>
     </div>
+    <br/>
+    <br/>
+    <br/>
+    <center>
+      By <a href="http://www.chrisjeakle.com" target="_blank"> Chris Jeakle.</a>
+      &nbsp;&nbsp;&nbsp;///&nbsp;&nbsp;&nbsp;
+      <a href="https://github.com/cjjeakle/rebalance-calc" target="_blank">View project source.</a>
+    </center>
     <br/>
     <br/>
     <br/>
