Updated the app's design to respect the browser back and forward buttons

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             Click here to load some example data.
           </a>
 
-          <a class="six columns align-right" href="javascript:clearState()">
+          <a class="six columns align-right" href="">
             Click here to clear all data.
           </a>
         </div>
