Removed any use of _Blank in links

--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@
     <br/>
     <br/>
     <div class="center">
-      By <a href="http://www.chrisjeakle.com" target="_blank"> Chris Jeakle.</a>
+      By <a href="http://www.chrisjeakle.com"> Chris Jeakle.</a>
       &nbsp;&nbsp;&nbsp;///&nbsp;&nbsp;&nbsp;
-      <a href="https://github.com/cjjeakle/rebalance-calc" target="_blank">View project source.</a>
+      <a href="https://github.com/cjjeakle/rebalance-calc">View project source.</a>
     </div>
     <br/>
     <br/>
