Significant code cleanup

--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
           <p>
             Suggested order:
             <br/>
-            Assets with high dividends relative to value growth (less tax efficient), 
+            Returns primairly from non-qualified dividends (less tax efficient), 
             <br/>
-            assets with high value growth relative dividends (more tax efficient), 
+            Returns primairly from qualified dividends and capital gains (more tax efficient), 
             <br/>
             assets eligible for tax credits and deductions (most tax efficient).
           </p>
