--- a/index.html
+++ b/index.html
@@ -40,7 +40,10 @@
         <ol>
           <h6 class="no-margin">How it works:</h6>
           <li>The total value of all accounts is determined, and is partitioned among the asset classes by percentage of the portfolio.</li>
-          <li>Assets are then allocated into accounts from top to bottom, moving to the next account when a given account's value is depleted.</li>
+          <li>'Tax inefficient assets' are assigned to tax deferred accounts, then to tax free accounts, and finally taxable accounts.</li>
+          <li>'Foreign assets' are assigned to taxable accounts, and any remaining allocation is postopned to the final step.</li>
+          <li>'All other assets' are assigned to tax free accounts, any remaining allocation is postponed to the final step, as well.</li>
+          <li>Any remaining asset value is distributed among the remaining accounts with available balances.</li>
           <li>The result of this is displayed below in a table.</li>
         </ol>
         <div class = "row">
@@ -65,7 +68,9 @@
           <br/>
           <br/>
           <p>
-            Assets primairly earning via non-qualified dividends (tax inefficient):
+            Tax inefficient assets (eg: bonds)
+            <br/>
+            (primairly earn via non-qualified dividends):
           </p>
           <div data-bind="template: { name: 'asset-class-template', foreach: assetClassesInefficient }"></div>
           <button data-bind="click: newInefficientAssetClass">+</button>
@@ -73,7 +78,9 @@
           <br/>
 
           <p>
-            Assets eligible for foreign tax credits (very tax efficient):
+            Foreign assets
+            <br/>
+            (eligible for foreign tax credits):
           </p>
           <div data-bind="template: { name: 'asset-class-template', foreach: assetClassesCredit }"></div>
           <button data-bind="click: newCreditAssetClass">+</button>
@@ -81,9 +88,9 @@
           <br/>
 
           <p>
-            Assets primairly earning via qualified dividends 
+            All other assets, with highest expected growth at the top
             <br/>
-            and/or capital gains (tax efficient):
+            (generally earn via qualified dividends and/or capital gains):
           </p>
           <div data-bind="template: { name: 'asset-class-template', foreach: assetClassesEfficient }"></div>
           <button data-bind="click: newEfficientAssetClass">+</button>
