--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
         <br/>
         <p>
-          This tool is meant to help with re-balancing assets, and with building a tax efficient portfolio (in the U.S.). Periodically re-balancing keeps one's asset allocation (and exposure to risk) in a comfortable range, and works best when all investment accounts are treated as part of a single portfolio. 
+          This tool is meant to help with re-balancing investment assets, and with building a tax efficient portfolio (in the U.S.). Periodically re-balancing keeps one's asset allocation (and exposure to risk) in a comfortable range, and works best when all investment accounts are treated as part of a single portfolio. 
         </p>
         <p>
           See the bogleheads wiki for info on <a href="https://www.bogleheads.org/wiki/Principles_of_tax-efficient_fund_placement">tax efficiency</a>, 
