--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <h6 class="no-margin">How it works:</h6>
           <li>The total value of all accounts is determined, and is partitioned among the asset classes by percentage of the portfolio.</li>
           <li>'Tax inefficient assets' are assigned to tax deferred accounts, then to tax free accounts, and finally taxable accounts.</li>
-          <li>'Foreign assets' are assigned to taxable accounts, and any remaining allocation is postponed to the final step.</li>
+          <li>'Foreign and tax-exempt assets' are assigned to taxable accounts, and any remaining allocation is postponed to the final step.</li>
           <li>'All other assets' are assigned to tax free accounts, any remaining allocation is postponed to the final step, as well.</li>
           <li>Any remaining asset value is distributed among the remaining accounts with available balances.</li>
           <li>The result of this is displayed below in a table.</li>
