--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
         <div class="row center">
           <button id="save" class="button-primary" onClick="saveState();">save</button>
           <div id="save-complete-prompt" style="display:none;">
-            Simply bookmark the current page! All your work is saved in the URL as you go. 
+            Simply bookmark this page! Your work automatically updates the URL as you go. 
             <br/>
             <a id="save-link" href="">As a shortcut, you can bookmark or share this link.</a>
           </div>
