Added sitemap, improved UI.
Revised the link revealed by save link to auto-update with the site's url, so there is no confusion about inconsistent state. Also revised the save button to say 'hide link' when the save link is visible.

--- a/index.html
+++ b/index.html
@@ -179,9 +179,9 @@
         <!-- The save button -->
 
         <div class="row center">
-          <button id="save" class="button-primary" onClick="saveState();">save</button>
+          <button id="save-btn" class="button-primary" onClick="toggleUrlLink();">save</button>
           <div id="save-complete-prompt" style="display:none;">
-            Simply bookmark this page when ready! The URL automatically contains your changes. 
+            Simply bookmark this page when ready! The URL bar automatically updates when there are changes. 
             <br/>
             <a id="save-link" href="">As a shortcut, you can bookmark or share this link.</a>
           </div>
